[tool.poetry]
name = "shopping-cart-server"
version = "0.1.0"
description = ""
authors = ["Rohan <rohanya.76426@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
